--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <h2>My Skills.</h2>
       <div class="skill-row">
         <img class="coding" src="images/coding.png" alt="coding image">
-        <h3>💻 Development & Animation</h3>
+        <h3>💻 Development </h3>
         <p class="skillset">I started my coding journey with C and C++ for basic knowledge of coding. Then, I developed an interest in Cybersecurity and started learning Python.
           <br>Currently, I am learning Web development.
         </p>
