--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/shreyan-haldankar-2923311b7">LinkedIn</a>
     <a class="footer-link" href="https://github.com/shreyan-haldankar">Github</a>
     <a class="footer-link" href="https://www.instagram.com/shreyan__09/">Instagram</a>
     <p class="cc">© 2021 Shreyan Haldankar.</p>
