--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <img class="profile_pic" src="images/profile_final.png" alt="my profile pic">
       <h2>Hello.</h2>
       <p class="intro">I am a web developer and a Computer Science engineer.<br>
-        I enjoy buidling everything from, creative
+        I enjoy building everything from, creative
         and beautiful, small project sites to cool interactive web apps.</p>
     </div>
     <hr>
