--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
       <div class="skill-row">
         <img class="coding" src="images/coding.png" alt="coding image">
         <h3>💻 Development </h3>
-        <p class="skillset">I started my coding journey with C and C++ for basic knowledge of coding. Then, I developed an interest in Cybersecurity and started learning Python.
-          <br>Currently, I am learning Web development.
+        <p class="skillset">I started my coding journey with C and C++ for basic knowledge of coding. Then, I developed a keen interset in Automating my daily tasks and started learning Python.
+          <br>Currently, I am learning Front-End Development with Javascript.
         </p>
       </div>
       <div class="skill-row">
         <img class="ai" src="images/ai.png" alt="AI image">
         <h3>🌱 Looking Forward to learn</h3>
-        <p class="ai_para">I am eager to learn Python for Machine Learning And I'm also looking forward to learn Java for Web-based Applications.
+        <p class="ai_para">I am eager to learn Django for Backend Development And I'm also looking forward to learn more about Software Development.
         </p>
       </div>
     </div>
