--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="skill-row">
         <img class="coding" src="images/coding.png" alt="coding image">
         <h3>💻 Development </h3>
-        <p class="skillset">I started my coding journey with C and C++ for basic knowledge of coding. Then, I developed a keen interset in Automating my daily tasks and started learning Python.
+        <p class="skillset">I started my coding journey with C and C++ for basic knowledge of coding. Then, I developed a keen interest in Automating my daily tasks and started learning Python.
           <br>Currently, I am learning Front-End Development with Javascript.
         </p>
       </div>
