--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <img class="coding" src="images/coding.png" alt="coding image">
         <h3>💻 Development </h3>
         <p class="skillset">I started my coding journey with C and C++ for basic knowledge of coding. Then, I developed a keen interest in Automating my daily tasks and started learning Python.
-          <br>Currently, I am learning Front-End Development with Javascript.
+          <br>Currently, I am learning Front-End Development with HTML, CSS, Bootstrap and Javascript.
         </p>
       </div>
       <div class="skill-row">
